appId: dev.uixvisor.testharness
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element:
      id: otp-code-input
    direction: DOWN
- tapOn:
    id: otp-code-input
- inputText: 123456
- hideKeyboard
- assertVisible: "123456"
- assertVisible: Resend code
- tapOn: Resend code
